<resources>
    <string name="app_name">dodo</string>

    <string name="cancel">Cancel</string>
    <string name="success">Success!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="clear_all">Clear All</string>

    <string name="home_item_deleted">An item was deleted.</string>
    <string name="home_delete_this_item">Delete this item?</string>
    <string name="home_delete_confirm">Are you sure you want to permanently delete this item?</string>
    <string name="home_delete_yes">Yes, Delete</string>
    <string name="home_filter_by_label">Filter by label</string>
    <string name="home_empty_state_heading">Nothing here!</string>
    <string name="home_empty_state_caption">It looks like everything has been filtered. Try removing some filters or clearing the search at the top of the screen.</string>
    <string name="home_nothing_added_state">Looks like there isn\'t anything here yet!</string>
    <string name="home_add_items_cta">Get started</string>

    <string name="edit_label_add_label_heading">Add a new label</string>
    <string name="edit_label_edit_label_heading">Edit label</string>
    <string name="edit_label_label_title_heading">Label title</string>
    <string name="edit_label_label_title_hint">Label title</string>
    <string name="edit_label_label_color_heading">Color</string>
    <string name="edit_label_error_color_required">A color choice is required.</string>
    <string name="edit_label_error_title_required">Label title is required.</string>
    <string name="edit_label_error_title_too_long">Label title is limited to 30 characters.</string>
    <string name="edit_label_delete_this_item">Delete this item?</string>
    <string name="edit_label_delete_confirm">Are you sure you want to permanently delete this item? This label will be removed from any items associated with it.</string>
    <string name="edit_label_delete_yes">Yes, Delete</string>

    <string name="add_edit_add_due_date">Add Due Date</string>
    <string name="add_edit_edit_due_date">Edit Due Date</string>
    <string name="add_edit_select_due_date">Select a due date</string>
    <string name="add_edit_no_due_date">No due date</string>
    <string name="add_edit_format_due_date">Due %s</string>
    <string name="add_edit_add_edit_item">Add/edit item</string>
    <string name="add_edit_description_heading">Description</string>
    <string name="add_edit_description_hint">Description</string>
    <string name="add_edit_due_date_heading">Due date</string>
    <string name="add_edit_label_heading">Label</string>
    <string name="add_edit_error_description_required">A description is required.</string>
    <string name="add_edit_due_date_caption">Add an optional due date.</string>
    <string name="add_edit_label_caption">Add an optional label.</string>
    <string name="add_edit_notes_heading">Notes</string>

    <string name="settings_sorting_heading">Sorting</string>
    <string name="settings_sort_alphabetically_radio">Sort alphabetically</string>
    <string name="settings_sort_by_due_radio">Sort by due date (soonest first)</string>
    <string name="settings_sort_date_created_radio">Sort by date created (oldest first)</string>
    <string name="settings_sort_last_update_radio">Sort by last update (most recent first)</string>
    <string name="settings_filtering_heading">Filtering</string>
    <string name="settings_allow_filtering_by_labels_check">Allow filtering by labels</string>
    <string name="settings_display_heading">Display</string>
    <string name="settings_show_due_date_check">Show due date</string>
    <string name="settings_show_label_check">Show label</string>
    <string name="settings_show_notes_check">Show notes</string>

    <string name="error_database">There was something wrong when we tried to receive data.</string>
    <string name="error_network">There was something wrong when we tried to connect to the network.</string>
    <string name="error_validation">Something wasn\'t entered correctly. Please check all of the fields are filled out correctly.</string>
    <string name="add_new_item">Add new item</string>
    <string name="add_edit_notes_caption">Add optional notes.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="settings_show_date_created_check">Show date created</string>
    <string name="settings_show_last_update_check">Show last update</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

</resources>