<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.labels.EditLabelsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Labels" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp"
        android:clipToPadding="false"
        android:padding="@dimen/large_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="xyz.katiedotson.dodo.MainActivity"
        tools:listitem="@layout/view_label_chip_list_item" />

    <FrameLayout
        android:id="@+id/bottomSheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_padding"
        app:behavior_expandedOffset="100dp"
        app:behavior_fitToContents="false"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bottomSheetTitle"
                style="@style/TextAppearance.Dodo.Headline6.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_padding"
                android:text="@string/edit_label_add_label_heading" />

            <TextView
                style="@style/TextAppearance.Dodo.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_padding"
                android:text="@string/edit_label_label_title_heading" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_padding"
                android:hint="@string/edit_label_label_title_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.Dodo.Headline6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/standard_padding"
                android:text="@string/edit_label_label_color_heading" />

            <TextView
                android:id="@+id/colorError"
                style="@style/TextAppearance.Dodo.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/rust"
                android:visibility="gone"
                tools:text="Color choice is required." />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/view_horizontal_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/large_padding" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clearBtn"
                    style="@style/Widget.Dodo.Button.TextButton.Red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveBtn"
                    style="@style/Widget.Dodo.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:textAllCaps="true" />
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>